(New) Finish detail page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <nav class="t-bg-black-gray-color p-2">
     <div class="container-xl d-flex">
-      <div class="banner d-flex align-items-center">
+      <a class="banner d-flex align-items-center text-decoration-none" href="#">
         <img class="logo" src="img/logo.svg" alt="Logo">
         <h3 class="d-inline-block text-white m-0 lh-sm ms-2">ZATTIX</h3>
-      </div>
+      </a>
       <ul class="nav-options list-inline t-gray-color m-0 d-flex align-items-center ms-auto ms-lg-3">
         <a href="#"><li class="fs-6 list-inline-item ms-3 me-0 t-pink-color"><i class="bi bi-house-fill"></i> <span class="d-none d-md-inline">HOME</span> </li></a>
         <a href="#" class="t-gray-color"><li class="fs-6 list-inline-item ms-3 me-0"><i class="bi bi-card-list"></i> <span class="d-none d-md-inline">COLLECTIONS</span> </li></a>
@@ -274,31 +274,31 @@
       <div class="col-12 col-md-6 col-lg-3 order-md-0 order-lg-1">
         <h6 class="t-pink-color pb-1 footer-header fw-bold">CATEGORIES</h6>
         <ul class="list-unstyled d-flex flex-wrap fw-bold t-gray-color">
-          <li class="w-50">Real Estate</li>
-          <li class="w-50">Real Estate</li>
-          <li class="w-50">Automotives</li>
-          <li class="w-50">Automotives</li>
-          <li class="w-50">Electronics</li>
-          <li class="w-50">Electronics</li>
-          <li class="w-50">Clothing</li>
-          <li class="w-50">Clothing</li>
-          <li class="w-50">Fashion</li>
-          <li class="w-50">Fashion</li>
-          <li class="w-50">Kids</li>
-          <li class="w-50">Kids</li>
-          <li class="w-50">Food & Drink</li>
-          <li class="w-50">Food & Drink</li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Real Estate</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Real Estate</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Automotives</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Automotives</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Electronics</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Electronics</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Clothing</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Clothing</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Fashion</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Fashion</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Kids</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Kids</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Food & Drink</a></li>
+          <li class="w-50"><a href="#" class="text-decoration-none t-gray-color">Food & Drink</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6 col-lg-3 order-1 order-lg-2 mb-5">
         <h6 class="t-pink-color pb-1 footer-header fw-bold">NAVIGATION</h6>
         <ul class="list-unstyled fw-bold t-gray-color">
-          <li>Home</li>
-          <li>Sign In</li>
-          <li>Sign Up</li>
-          <li>Terms & Conditions</li>
-          <li>FAQ</li>
-          <li>Help</li>
+          <li><a href="#" class="text-decoration-none t-gray-color">Home</a></li>
+          <li><a href="#" class="text-decoration-none t-gray-color">Sign In</a></li>
+          <li><a href="#" class="text-decoration-none t-gray-color">Sign Up</a></li>
+          <li><a href="#" class="text-decoration-none t-gray-color">Terms & Conditions</a></li>
+          <li><a href="#" class="text-decoration-none t-gray-color">FAQ</a></li>
+          <li><a href="#" class="text-decoration-none t-gray-color">Help</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-6 col-lg-3 order-md-3 pe-lg-0 order-lg-3">
