--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <input class="form-control mb-2 rounded-0" type="text" placeholder="Enter tags">
         </div>
         <div class="col-lg-2">
-          <a href="/detail.html" class="w-100 p-2 t-bg-black-gray-color t-gray-color fs-6 border-0 text-decoration-none text-center" type="submit">Search</a>
+          <a href="./detail.html" class="w-100 p-2 t-bg-black-gray-color t-gray-color fs-6 border-0 text-decoration-none text-center" type="submit">Search</a>
         </div>
       </form>
     </div>
