(Bug) Fix the first result image in the detail page

--- a/detail.html
+++ b/detail.html
@@ -184,7 +184,7 @@
           <div class="results">
             <div class="result-item d-md-flex border-bottom ps-lg-3 pb-4 mb-3">
               <div class="img-pager position-relative d-flex justify-content-center mb-2 mb-md-0 me-md-3">
-                <img class="img-fluid" src="img/Search1.jpg" alt="Shoes">
+                <img class="img-fluid" src="img/search1.jpg" alt="Shoes">
                 <div class="pager-options position-absolute d-flex">
                   <span class="t-bg-black-gray-color px-2 py-1 fs-6 rounded-start"><i class="t-pink-color bi bi-chevron-left"></i></span>
                   <span class="t-bg-black-gray-color px-2 py-1 fs-6 rounded-end"><i class="t-pink-color bi bi-chevron-right"></i></span>
