--- a/detail.html
+++ b/detail.html
@@ -12,8 +12,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="detail.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/detail.css">
 </head>
 
 <body>
