(Bug) anchor tags are not a direct child of ul tags anymore

--- a/detail.html
+++ b/detail.html
@@ -24,19 +24,16 @@
         <h3 class="d-inline-block text-white m-0 lh-sm ms-2">ZATTIX</h3>
       </a>
       <ul class="nav-options list-inline t-gray-color m-0 d-flex align-items-center ms-auto ms-lg-3">
-        <a href="#">
-          <li class="fs-6 list-inline-item ms-3 me-0 t-pink-color"><i class="bi bi-house-fill"></i> <span
-              class="d-none d-md-inline">HOME</span> </li>
-        </a>
-        <a href="#" class="t-gray-color">
-          <li class="fs-6 list-inline-item ms-3 me-0"><i class="bi bi-card-list"></i> <span
-              class="d-none d-md-inline">COLLECTIONS</span> </li>
-        </a>
-        <a href="#" class="t-gray-color">
-          <li class="fs-6 list-inline-item ms-3 me-0"><i class="bi bi-cart4"></i> <span
-              class="d-none d-md-inline">PURCHASE LIST</span> </li>
-        </a>
-        <a href="#" class="d-none d-lg-block btn t-bg-pink-color ms-3 me-0 text-white rounded-0">POST AN AD</a>
+        <li class="fs-6 list-inline-item ms-3 me-0">
+          <a href="#" class="text-decoration-none t-pink-color"><i class="bi bi-house-fill"></i> <span class="d-none d-md-inline">HOME</span></a>
+        </li>
+        <li class="fs-6 list-inline-item ms-3 me-0">
+          <a href="#" class="text-decoration-none t-gray-color"><i class="bi bi-card-list"></i> <span class="d-none d-md-inline">COLLECTIONS</span></a>
+        </li>
+        <li class="fs-6 list-inline-item ms-3 me-0">
+          <a href="#" class="text-decoration-none t-gray-color"><i class="bi bi-cart4"></i> <span class="d-none d-md-inline">PURCHASE LIST</span></a>
+        </li>
+        <li><a href="#" class="text-decoration-none d-none d-lg-block btn t-bg-pink-color ms-3 me-0 text-white rounded-0">POST AN AD</a></li>
       </ul>
       <div class="d-none d-lg-flex align-items-center ms-auto">
         <i class="bi bi-envelope-fill t-gray-color"></i>
@@ -433,10 +430,10 @@
         </form>
         <form class="row mb-2">
           <div class="col-3 col-lg-4">
-            <label for="country" class="col-form-label t-pink-color fw-bold">Language</label>
+            <label for="language" class="col-form-label t-pink-color fw-bold">Language</label>
           </div>
           <div class="col-auto flex-grow-1">
-            <select id="country" class="form-control" >
+            <select id="language" class="form-control" >
               <option value="1">English</option>
               <option value="2">German</option>
               <option value="3">French</option>
@@ -445,10 +442,10 @@
         </form>
         <form class="row mb-2">
           <div class="col-3 col-lg-4">
-            <label for="country" class="col-form-label t-pink-color fw-bold">Currency</label>
+            <label for="currency" class="col-form-label t-pink-color fw-bold">Currency</label>
           </div>
           <div class="col-auto flex-grow-1">
-            <select id="country" class="form-control" >
+            <select id="currency" class="form-control" >
               <option value="1">US Dolar</option>
               <option value="2">Euro</option>
               <option value="3">Pound Sterling</option>
@@ -462,21 +459,11 @@
     <div class="big-container d-md-flex justify-content-between">
       <p class="m-md-0">Copyright 2015 Zattix.com. All Rights Reserved. Designeed by Mohammed Awad</p>
       <ul class="list-inline social-media m-0">
-        <a href="#" class="t-gray-color ms-2">
-          <li class="list-inline-item"><i class="fs-6 bi bi-google"></i></li>
-        </a>
-        <a href="#" class="t-gray-color ms-2">
-          <li class="list-inline-item"><i class="fs-6 bi bi-youtube"></i></li>
-        </a>
-        <a href="#" class="t-gray-color ms-2">
-          <li class="list-inline-item"><i class="fs-6 bi bi-twitter"></i></li>
-        </a>
-        <a href="#" class="t-gray-color ms-2">
-          <li class="list-inline-item"><i class="fs-6 bi bi-facebook"></i></li>
-        </a>
-        <a href="#" class="t-gray-color ms-2">
-          <li class="list-inline-item"><i class="fs-6 bi bi-linkedin"></i></li>
-        </a>
+        <li class="list-inline-item"><a href="#" class="t-gray-color ms-2"><i class="fs-6 bi bi-google"></i></a></li>
+        <li class="list-inline-item"><a href="#" class="t-gray-color ms-2"><i class="fs-6 bi bi-youtube"></i></a></li>
+        <li class="list-inline-item"><a href="#" class="t-gray-color ms-2"><i class="fs-6 bi bi-twitter"></i></a></li>
+        <li class="list-inline-item"><a href="#" class="t-gray-color ms-2"><i class="fs-6 bi bi-facebook"></i></a></li>
+        <li class="list-inline-item"><a href="#" class="t-gray-color ms-2"><i class="fs-6 bi bi-linkedin"></i></a></li>
       </ul>
     </div>
   </footer>
