--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="t-bg-black-gray-color p-2">
     <div class="container-xl d-flex">
-      <a class="banner d-flex align-items-center text-decoration-none" href="#">
+      <a class="banner d-flex align-items-center text-decoration-none" href="./index.html">
         <img class="logo" src="img/logo.svg" alt="Logo">
         <h3 class="d-inline-block text-white m-0 lh-sm ms-2">ZATTIX</h3>
       </a>
@@ -61,7 +61,7 @@
           <input class="form-control mb-2 rounded-0" type="text" placeholder="Enter tags">
         </div>
         <div class="col-lg-2">
-          <button class="w-100 p-2 t-bg-black-gray-color t-gray-color fs-6 border-0 " type="submit">Search</button>
+          <button class="w-100 p-2 t-bg-black-gray-color t-gray-color fs-6 border-0 d-block" type="submit">Search</button>
         </div>
       </form>
     </div>
