(New) Add margin between the footer and the main content in the main page

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
     </div>
   </section>
-  <main class="border-top border-bottom d-flex justify-content-center t-bg-section-gray-color px-3">
+  <main class="border-top border-bottom d-flex justify-content-center t-bg-section-gray-color px-3 pb-3">
     <div class="big-container">
       <section class="py-3 px-lg-0">
         <div class="section-header d-flex align-items-end border-bottom mb-4">
