--- a/detail.html
+++ b/detail.html
@@ -66,7 +66,7 @@
       </form>
     </div>
   </section>
-  <main class="border-top border-bottom d-flex justify-content-center t-bg-section-gray-color px-3">
+  <main class="border-top border-bottom d-flex justify-content-center t-bg-section-gray-color px-3 pb-3">
     <div class="big-container">
       <section class="p-3 pt-0 px-lg-0 row">
         <div class="col-12 col-lg-3 pt-3 filter-options">
